--- a/src/sweetrs/locale/pl/LC_MESSAGES/django.po
+++ b/src/sweetrs/locale/pl/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-08-20 23:24+0200\n"
+"POT-Creation-Date: 2011-08-21 12:47-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,10 +37,10 @@ msgstr "Dodaj zdjęcie"
 #: recommender/templates/recommender/product.add.html:4
 msgid ""
 "Please provide photos with white background - it really looks much nicer :)"
-msgstr ""
-"Proszę dodawać zdjęcia z białym tłem - wyglądają dużo fajniej :)"
+msgstr "Proszę dodawać zdjęcia z białym tłem - wyglądają dużo fajniej :)"
 
 #: recommender/templates/recommender/products.html:3
+#: templates/flatpages/about.html:18
 msgid "Rate sweets"
 msgstr "Oceń słodycze"
 
@@ -109,37 +109,45 @@ msgstr "Klucz"
 msgid "Users"
 msgstr "Użytkownicy"
 
-#: recommender/templates/recommender/recommends.html:37
+#: recommender/templates/recommender/recommends.html:32
+msgid ""
+"Your tau correlation coefficients with other sweetrs users. I will give some "
+"details later, right now you can read something on <a href='http://en."
+"wikipedia.org/wiki/Pearson_correlation'>wikipedia</a>."
+msgstr ""
+"Twój współczynnik tau z innymi użytkownikami. W przyszłości napiszę więcej na "
+"ten temat, ale teraz możesz poczytać coś tutaj <a href='http://pl.wikipedia.org/wiki/Wsp%C3%B3%C5%82czynnik_korelacji_Pearsona'>wikipedia</a>."
+
+#: recommender/templates/recommender/recommends.html:36
 msgid "User"
 msgstr "Użytkownik"
 
-#: recommender/templates/recommender/recommends.html:38
+#: recommender/templates/recommender/recommends.html:37
 msgid "Your correlation with this user"
 msgstr "Twoja korelacja z tym użytkownikiem"
 
-#: recommender/templates/recommender/recommends.html:66
+#: recommender/templates/recommender/recommends.html:65
 msgid "Ratings"
 msgstr "Oceny"
 
-#: recommender/templates/recommender/recommends.html:67
+#: recommender/templates/recommender/recommends.html:66
 msgid ""
 "Currently I predict rating as weighted sum of other users ratings, where "
 "weights are just correlation coefficients (normalized).\n"
 "    More details will be shown later.<br />\n"
 "    Red background is just for noticing big mistake made by algorithm i.e. "
 "if predicted value differates \"too much\" with your rank."
-msgstr ""
-" "
+msgstr " "
 
-#: recommender/templates/recommender/recommends.html:73
+#: recommender/templates/recommender/recommends.html:72
 msgid "Product"
 msgstr "Produkt"
 
-#: recommender/templates/recommender/recommends.html:74
+#: recommender/templates/recommender/recommends.html:73
 msgid "Your rate"
 msgstr "Twoja ocena"
 
-#: recommender/templates/recommender/recommends.html:75
+#: recommender/templates/recommender/recommends.html:74
 msgid "Prediction"
 msgstr "Predykcja"
 
@@ -149,7 +157,8 @@ msgstr "SweetRS - System Rekomendacji Słodyczy"
 
 #: templates/base.html:136
 msgid "Contribute to scientific project and find out which sweets you like."
-msgstr "Weź udział w projekcie naukowym i zobacz jakie nowe słodycze byś polubił."
+msgstr ""
+"Weź udział w projekcie naukowym i zobacz jakie nowe słodycze byś polubił."
 
 #: templates/base.html:145
 msgid "About the project"
@@ -170,3 +179,236 @@ msgstr "Dodaj słodycze"
 #: templates/base.html:151
 msgid "FAQ"
 msgstr "Pytania"
+
+#: templates/base.html:170
+msgid "Choose language"
+msgstr "Wybierz język"
+
+#: templates/flatpages/about.html:4
+msgid ""
+"C is for cookie, it's good enough for me,<br />oh cookie cookie cookie "
+"starts with C."
+msgstr "C jest dla ciasteczek i mi zupełnie wystarcza,<br />oh ciasteczko, ciasteczko, ciasteczko zaczyna się na C"
+
+#: templates/flatpages/about.html:5
+msgid "Cookie monster"
+msgstr "Ciasteczkowy potwór"
+
+#: templates/flatpages/about.html:7
+msgid "Hello"
+msgstr "Cześć"
+
+#: templates/flatpages/about.html:8
+msgid ""
+"If you have found this website you are probably in my social circle. That's "
+"great. You might even know that my name is"
+msgstr "Jeśli tutaj trafiłeś to prawdopodobnie jesteś moim znajomym (lub znajomym znajomego :). Super! Możesz nawet wiedzieć, że nazywam się"
+
+#: templates/flatpages/about.html:9
+msgid ""
+"and I'm a wannabe computer scientist from Poland.\n"
+"I'm working on my master's thesis right now which is the recommender system."
+msgstr "i jestem prawie-naukowcem z Polski. Pracuję nad pracą magisterską, którą będzie system rekomendacji."
+
+#: templates/flatpages/about.html:13
+msgid "Contribute to scientific project - all I need is your 5 minutes"
+msgstr ""
+"Weź udział w projekcie naukowym - potrzebuję tylko Twoich 5 minut"
+
+#: templates/flatpages/about.html:14
+msgid ""
+"On this website I ask for your ratings of popular sweets. Then my systems "
+"predicts which sweets you would prefer from those which you don't know!"
+msgstr "Na tej stronie pytam o oceny popularnych słodyczy. Mój system"
+"przewiduje oceny słodyczy które by Ci się podobały (i których nie znasz)!"
+
+#: templates/flatpages/about.html:15
+msgid "START"
+msgstr "START"
+
+#: templates/flatpages/about.html:17
+msgid "2 easy steps to help me:"
+msgstr "2 proste kroki by mi pomóc:"
+
+#: templates/flatpages/about.html:19
+msgid ""
+"try to provide ratings for as much sweets as you can. If you haven't eaten "
+"given sweet then mark it that way because this information is also important."
+msgstr ""
+"spróbuj ocenić jak najwięcej słodyczy. Jeśli czegoś nie jadłeś"
+"to kliknij odpowiedni przycisk by system wiedział co ma ocenić za Ciebie!"
+
+#: templates/flatpages/about.html:20
+msgid "Enjoy recommends"
+msgstr "Ciesz się rekomendacjami"
+
+#: templates/flatpages/about.html:21
+msgid ""
+"find out which new sweets you'd like. Enjoy them or not and give me feedback "
+"afterwards :)"
+msgstr ""
+"zobacz które słodycze byś lubił. Ciesz się nimi lub nie i daj mi znać czy system "
+"pomógł :)"
+
+#: templates/flatpages/about.html:23
+msgid "What do I need?"
+msgstr "Czego potrzebuję?"
+
+#: templates/flatpages/about.html:24
+msgid ""
+"In order to build reliable system I need at least:<br />500 users and about "
+"10000 marks"
+msgstr "Aby zbudować wartościowy system potrzebuję co najmniej:<br />500 użytkowników i około 10000 ocen"
+
+#: templates/flatpages/about.html:26
+msgid "So far..."
+msgstr "Aktualnie..."
+
+#: templates/flatpages/about.html:27
+msgid "users contributed"
+msgstr "użytkowników pomogło"
+
+#: templates/flatpages/about.html:31
+msgid "ratings provided"
+msgstr "ocen"
+
+#: templates/flatpages/about.html:35
+msgid "Still not sure?"
+msgstr "Wciąć nie jesteś przekonany"
+
+#: templates/flatpages/about.html:36
+msgid "Read more in"
+msgstr "Przeczytaj więcej na"
+
+#: templates/flatpages/about.html:36
+msgid "or contact"
+msgstr "lub skontaktuj"
+
+#: templates/flatpages/about.html:36
+msgid "me"
+msgstr "ze mną"
+
+#: templates/flatpages/about.html:38
+msgid "Do you like it? Click 'LIKE'!"
+msgstr "Podobało się? Kliknij 'LUBIĘ TO'!"
+
+#: templates/flatpages/about.html:39
+msgid "It will help me in promoting this application."
+msgstr "Pomoże mi to w promowaniu systemu"
+
+#: templates/flatpages/faq.html:3
+msgid "Why sweets?"
+msgstr "Dlaczego słodycze?"
+
+#: templates/flatpages/faq.html:5
+msgid "everyone have already eaten some,"
+msgstr "każdy kiedyś jakieś zjadł,"
+
+#: templates/flatpages/faq.html:6
+msgid "there are lots of them, but the set can be easly shrinked,"
+msgstr "jest ich mnóstwo, ale zbiór można łatwo zawęzić,"
+
+#: templates/flatpages/faq.html:7
+msgid "it's quite easy to distinguish whether we like given candy or not,"
+msgstr "jest dość łatwo ocenić czy któreś lubimy czy nie"
+
+#: templates/flatpages/faq.html:8
+msgid ""
+"as long as candies are not considered to be the most important thing on the "
+"planet, it won't shift the focus from making great algorithm to the product "
+"itself,"
+msgstr ""
+"dopóki słodycze nie są najważniejszą rzeczą na świecie, "
+"temat nie spowoduje, że ta strona zamiast służyć nauce przekształci się w "
+"produkt komercyjny."
+
+#: templates/flatpages/faq.html:11
+msgid "How does it work?"
+msgstr "Jak to działa?"
+
+#: templates/flatpages/faq.html:13
+msgid ""
+"\n"
+"        I have populated database of candies with some \"international\" "
+"ones. People who had joined this project (just by\n"
+"        clicking 'Review') review those items on the 1-5 grade. \n"
+"        The algorithm which I'm going to build as my master thesis gathers "
+"all data and recommends you\n"
+"        sweets that you haven't ever tried and that you would like.\n"
+"        "
+msgstr ""
+"\n"
+"Dodałem do bazy trochę słodyczy znanych na całym świecie. Ludzie którzy "
+"już pomogli (klkikając 'Oceniaj') ocenili te produkty w skali od 1 do 5."
+"Algorytm który buduję jako pracę magisterską zbiera te dane i podpowiada "
+"które słodycze by Ci się podobały."
+
+#: templates/flatpages/faq.html:20
+msgid "Sounds great to me, how can I contribute?"
+msgstr "Brzmi super, jak mogę pomóc?"
+
+#: templates/flatpages/faq.html:22
+msgid ""
+"Just rate some products, check your recommendations and have fun with "
+"exploring new candies :)"
+msgstr ""
+"Wystarczy, że ocenisz produkty. Sprawdź rekomendacje i ciesz się "
+"propozycjami."
+
+#: templates/flatpages/faq.html:24
+msgid "I love this project - could I help more somehow?"
+msgstr "Uwielbiam ten produkt - czy mogę jeszcze jakoś pomóc?"
+
+#: templates/flatpages/faq.html:26
+msgid ""
+"Sure. Just contact me and tell something about your background, ie. are you "
+"mathematician, statistician, software engineer, candy lover, taxi driver or "
+"graphic designer."
+msgstr ""
+"Jasne! Po prostu napisz do mnie i powiedz mi czym się zajmujesz, tj. czy "
+"jesteś matematykiem, statystykiem, programistą, miłośnikiem słodyczy, "
+"taksówkarzem czy grafikiem."
+
+#: templates/flatpages/faq.html:28
+msgid "Is it innovative anyhow?"
+msgstr "Czy to jest innowacyjne?"
+
+#: templates/flatpages/faq.html:30
+msgid ""
+"The idea is already used by many companies, however there are not many open-"
+"source approaches."
+msgstr ""
+"Sam pomysł jest już używany przez wiele korporacji, ale wersji 'otwartych' "
+"jeszcze nie ma wielu."
+
+#: templates/flatpages/faq.html:32
+msgid "Why should one bother about creating good recommender system?"
+msgstr "Po co zajmować się tworzeniem systemu rekomendacji?"
+
+#: templates/flatpages/faq.html:34
+msgid ""
+"Because I have to create something for my master thesis :). There are some "
+"recommender systems but there are also some issues:"
+msgstr ""
+"Bo muszę jakoś napisać pracę magisterską :). Jest wiele systemów rekomendacji, "
+"ale jest też kilka poblemów:"
+
+#: templates/flatpages/faq.html:36
+msgid ""
+"most of them are closed sourced so one can't check why he was given such "
+"recommendations (it may lead to abuses),"
+msgstr ""
+"większość z nich ma zamknięty kod źródłowy i nie można sprawdzić dlaczego "
+"dany produkt został zaproponowany (co prowadzi do nadużyć)."
+
+#: templates/flatpages/faq.html:37
+msgid ""
+"there is always problem with getting relevant data (there are not many "
+"institutions that provide it for free),"
+msgstr ""
+"zawsze jest problem ze zbieraniem danych (większość firm nie udostępnia "
+"ich za darmo)."
+
+msgid "Add"
+msgstr "Dodaj"
+
