--- a/src/sweetrs/locale/pl/LC_MESSAGES/django.po
+++ b/src/sweetrs/locale/pl/LC_MESSAGES/django.po
@@ -137,7 +137,11 @@ msgid ""
 "    More details will be shown later.<br />\n"
 "    Red background is just for noticing big mistake made by algorithm i.e. "
 "if predicted value differates \"too much\" with your rank."
-msgstr " "
+msgstr "Aktualnie, oceny są przewidywane jako średnia ważona ocen innych użytkowników, "
+"gdzie wagi to współczynniki korelacji.\n"
+"Szczegóły znajdziesz w mojej pracy magisterskiej poniżej.<br />"
+"Różowe tło oznacza, że system zrobił duży błąd w ocenie. Jeśli się nie pojawiło"
+"w żadnym miejscu to znaczy, że poszło dobrze :)."
 
 #: recommender/templates/recommender/recommends.html:72
 msgid "Product"
@@ -414,3 +418,6 @@ msgstr "Dodaj"
 
 msgid "Your e-mail is needed only for ensuring that you are serious person. :)"
 msgstr "Twój e-mail jest potrzebny tylko po to by zagwarantować, że jesteś poważną osobą. :)"
+
+msgid "You will have an impact on my master thesis! Read current version now and learn more!"
+msgstr "Masz wpływ na moją magisterkę! Aktualną wersję możesz przeczytać klikając tutaj"
